# routes.go
@@ -55,6 +55,10 @@ func setupRoutes(appServer *AppServer) *gin.Engine {
 		api.POST("/user/profile", appServer.userProfileHandler)
 		api.POST("/feeds/comment", appServer.postCommentHandler)
 		api.POST("/feeds/comment/reply", appServer.replyCommentHandler)
+		api.POST("/feeds/like", appServer.likeFeedHandler)
+		api.POST("/feeds/favorite", appServer.favoriteFeedHandler)
+		api.POST("/feeds/comment/like", appServer.likeCommentHandler)
+		api.POST("/user/follow", appServer.followUserHandler)
 		api.GET("/user/me", appServer.myProfileHandler)
 	}
 
